add heatmap chart legends in overview-wrapper component

--- a/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
+++ b/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
@@ -37,9 +37,19 @@
                     </ng-container>
                 </div>
                 <div class="card-body">
+                    <div class="chart-legend mt-0 mb-2">
+                        <div class="legend-container">
+                            <div class="legend-square on"></div>
+                            <div class="legend-label">On</div>
+                        </div>
+                        <div class="legend-container ml-3">
+                            <div class="legend-square off"></div>
+                            <div class="legend-label">Off</div>
+                        </div>
+                    </div>
                     <app-chart-heat-map [data]="categoriesXRetail" [name]="selectedType + 'categories-by-retailer'"
                         categoryX="retailer" categoryY="category" height="250px" [showTooltipValue]="false"
-                        [showGridBorders]="true" [showHeatLegend]="false">
+                        [showGridBorders]="true" [showHeatLegend]="false" initialColor="#fafafa">
                     </app-chart-heat-map>
                 </div>
             </div>
@@ -53,9 +63,19 @@
                     <span class="h4">Categorías por Sector</span>
                 </div>
                 <div class="card-body">
+                    <div class="chart-legend mt-0 mb-2">
+                        <div class="legend-container">
+                            <div class="legend-square on"></div>
+                            <div class="legend-label">On</div>
+                        </div>
+                        <div class="legend-container ml-3">
+                            <div class="legend-square off"></div>
+                            <div class="legend-label">Off</div>
+                        </div>
+                    </div>
                     <app-chart-heat-map [data]="categoriesXSector" [name]="selectedType + 'categories-by-sector'"
                         categoryX="sector" categoryY="category" height="250px" [showTooltipValue]="false"
-                        [showGridBorders]="true" [showHeatLegend]="false">
+                        [showGridBorders]="true" [showHeatLegend]="false" initialColor="#fafafa">
                     </app-chart-heat-map>
                 </div>
             </div>
