use google-business component in retailer component

--- a/src/app/modules/dashboard/pages/retailer/retailer.component.html
+++ b/src/app/modules/dashboard/pages/retailer/retailer.component.html
@@ -183,6 +183,6 @@
     </ng-container>
 
     <ng-container *ngIf="activeTabView === 4">
-        <p class="text-muted">Google My Business...</p>
+        <app-google-business></app-google-business>
     </ng-container>
 </div>
