--- a/src/app/modules/dashboard/components/conversion-wrapper/conversion-wrapper.component.scss
+++ b/src/app/modules/dashboard/components/conversion-wrapper/conversion-wrapper.component.scss
@@ -22,6 +22,14 @@
             display: inline-block;
         }
     }
+
+    .value-container {
+        align-items: center;
+        display: grid;
+        grid-template-columns: 40px 30px;
+        gap: 8px;
+        justify-content: center;
+    }
 }
 
 .pills-container {
