update copys of heatmap legends in overview-wrapper component

--- a/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
+++ b/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
@@ -40,11 +40,11 @@
                     <div class="chart-legend mt-0 mb-2">
                         <div class="legend-container">
                             <div class="legend-square on"></div>
-                            <div class="legend-label">On</div>
+                            <div class="legend-label">Activas</div>
                         </div>
                         <div class="legend-container ml-3">
                             <div class="legend-square off"></div>
-                            <div class="legend-label">Off</div>
+                            <div class="legend-label">Inactivas</div>
                         </div>
                     </div>
                     <app-chart-heat-map [data]="categoriesXRetail" [name]="selectedType + 'categories-by-retailer'"
@@ -66,11 +66,11 @@
                     <div class="chart-legend mt-0 mb-2">
                         <div class="legend-container">
                             <div class="legend-square on"></div>
-                            <div class="legend-label">On</div>
+                            <div class="legend-label">Activas</div>
                         </div>
                         <div class="legend-container ml-3">
                             <div class="legend-square off"></div>
-                            <div class="legend-label">Off</div>
+                            <div class="legend-label">Inactivas</div>
                         </div>
                     </div>
                     <app-chart-heat-map [data]="categoriesXSector" [name]="selectedType + 'categories-by-sector'"
