--- a/src/app/modules/dashboard/components/charts/chart-heat-map/chart-heat-map.component.html
+++ b/src/app/modules/dashboard/components/charts/chart-heat-map/chart-heat-map.component.html
@@ -1,3 +1,13 @@
 <div class="chart" [style.height]="height">
-    <div [id]="chartID" style="height: 100%"></div>
+    <!-- loader -->
+    <app-chart-loader [hidden]="status > 1"></app-chart-loader>
+
+    <!-- ready -->
+    <div [hidden]="status !== 2" [id]="chartID" style="height: 100%"></div>
+
+    <!-- error -->
+    <div [hidden]="status !== 3" class="chart-error-container text-muted">
+        <span [hidden]="!errorLegend">{{ errorLegend }}</span>
+        <span [hidden]="errorLegend">Error al consultar datos</span>
+    </div>
 </div>
