--- a/src/styles.scss
+++ b/src/styles.scss
@@ -293,3 +293,11 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
     width: 16px;
   }
 }
+
+.chart-error-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
