emit selected filters in general-filters component

--- a/src/app/modules/dashboard/components/general-filters/general-filters.component.html
+++ b/src/app/modules/dashboard/components/general-filters/general-filters.component.html
@@ -93,7 +93,7 @@
         (!endDate.valid && endDate.touched) ||
         (sectors?.value?.length < 1 && sectors.touched) ||
         (categories?.value?.length < 1 && categories.touched)
-        ">
+        " (click)="applyFilters()">
             <i class="fas fa-filter mr-2"></i>
             Filtrar
         </button>
