update country component

--- a/src/app/modules/dashboard/pages/country/country.component.html
+++ b/src/app/modules/dashboard/pages/country/country.component.html
@@ -1,1 +1,1 @@
-<app-overview-wrapper selectedType="country" [selectedID]="countryID"></app-overview-wrapper>
+<app-overview-wrapper selectedType="country"></app-overview-wrapper>
