show legend when data is empty in chart-pyramid component

--- a/src/app/modules/dashboard/components/charts/chart-pyramid/chart-pyramid.component.html
+++ b/src/app/modules/dashboard/components/charts/chart-pyramid/chart-pyramid.component.html
@@ -1,9 +1,14 @@
 <div class="chart" [style.height]="height">
     <!-- loader -->
-    <app-chart-loader [hidden]="status > 1"></app-chart-loader>
+    <app-chart-loader [hidden]="status !== 1"></app-chart-loader>
 
     <!-- ready -->
-    <div [hidden]="status !== 2" [id]="chartID" style="height: 100%"></div>
+    <div [hidden]="status !== 2 || data?.length < 1" [id]="chartID" style="height: 100%"></div>
+
+    <!-- empty data -->
+    <div [hidden]="status !== 2 || data?.length > 0" class="chart-error-container text-muted">
+        <span>Sin datos disponibles</span>
+    </div>
 
     <!-- error -->
     <div [hidden]="status !== 3" class="chart-error-container text-muted">
