emit requestInfoChange in retailer component

--- a/src/app/modules/dashboard/pages/retailer/retailer.component.html
+++ b/src/app/modules/dashboard/pages/retailer/retailer.component.html
@@ -23,7 +23,7 @@
     </ul>
 
     <ng-container *ngIf="activeTabView === 1">
-        <app-overview-wrapper selectedType="retailer"></app-overview-wrapper>
+        <app-overview-wrapper selectedType="retailer" [requestInfoChange]="requestInfoChange$"></app-overview-wrapper>
     </ng-container>
 
     <ng-container *ngIf="activeTabView === 2">
