--- a/src/app/modules/dashboard/components/general-filters/general-filters.component.scss
+++ b/src/app/modules/dashboard/components/general-filters/general-filters.component.scss
@@ -15,3 +15,20 @@
     line-height: 18px;
     display: inline-block;
 }
+
+.mat-option-container {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+   
+    span {
+        display: inline-block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: calc(100% - 50px);
+    }
+
+    .btn-secondary {
+        box-shadow: 0 2px 2px rgb(50 50 93 / 5%), 0 1px 3px rgb(0 0 0 / 4%);
+    }
+}
