--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.scss
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.scss
@@ -27,13 +27,13 @@
 .pills-container {
     width: 60%;
 
-    .nav-item .nav-link {
-        cursor: pointer;
-    }
-
     @media screen and (max-width: 820px) {
         width: 100%;
     }
+}
+
+.nav-item .nav-link {
+    cursor: pointer;
 }
 
 .card-body {
@@ -128,4 +128,43 @@
     right: 0;
     top: 0;
     z-index: 1;
+}
+
+.period-popover {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 11px;
+
+    i {
+        color: #c7c7c7;
+        cursor: pointer;
+        font-size: 18px;
+    }
+
+    .content {
+        padding: 12px;
+
+        .period {
+            align-items: center;
+            display: flex;
+            justify-content: space-between;
+           
+            .line {
+                width: 25px;
+                height: 2px;
+        
+                &.first {
+                    background-color: #67B6DC;
+                }
+        
+                &.second {
+                    background-color: #A367DC;
+                }
+        
+                &.third {
+                    background-color: #DC67CE;
+                }
+            }
+        }
+    }
 }
