use maintenance component in other-tools component

--- a/src/app/modules/dashboard/pages/other-tools/other-tools.component.html
+++ b/src/app/modules/dashboard/pages/other-tools/other-tools.component.html
@@ -17,7 +17,7 @@
         </li>
     </ul>
 
-    <ng-container *ngIf="activeTabView === 1">
+    <!-- <ng-container *ngIf="activeTabView === 1">
         <p class="text-muted">Indexado</p>
     </ng-container>
 
@@ -27,5 +27,7 @@
 
     <ng-container *ngIf="activeTabView === 3">
         <p class="text-muted">PC Selector</p>
-    </ng-container>
+    </ng-container> -->
+
+    <app-maintenance></app-maintenance>
 </div>
