add and use maintenance component for under development sections (#114)
* add maintenance component to shared module

* use maintenance component in other-tools component

* use maintenance component in sentiment-analysis component

* use maintenance component in campaign-comparator component

--- a/src/app/modules/shared/components/maintenance/maintenance.component.scss
+++ b/src/app/modules/shared/components/maintenance/maintenance.component.scss
@@ -1,7 +1,8 @@
-.main-container {
+.message-container {
     align-items: center;
     display: flex;
-    height: calc(90vh - 64px);
+    flex-direction: column;
+    height: 100%;
     justify-content: center;
     width: 100%;
 }
