--- a/src/app/modules/dashboard/pages/sentiment-analysis/sentiment-analysis.component.html
+++ b/src/app/modules/dashboard/pages/sentiment-analysis/sentiment-analysis.component.html
@@ -22,7 +22,7 @@
         </li>
     </ul>
 
-    <ng-container *ngIf="activeTabView === 1">
+    <!-- <ng-container *ngIf="activeTabView === 1">
         <p class="text-muted">General</p>
     </ng-container>
 
@@ -36,5 +36,7 @@
 
     <ng-container *ngIf="activeTabView === 4">
         <p class="text-muted">Supplies</p>
-    </ng-container>
+    </ng-container> -->
+
+    <app-maintenance></app-maintenance>
 </div>
