update header in invite-user component

--- a/src/app/modules/users-mngmt/pages/invite-user/invite-user.component.html
+++ b/src/app/modules/users-mngmt/pages/invite-user/invite-user.component.html
@@ -1,6 +1,11 @@
+<div class="row mt-4">
+    <div class="col-12">
+        <p class="h2 mb-5 text-xl">Invitar usuario</p>
+    </div>
+</div>
+
 <div class="row">
     <div class="col-12">
-        <p class="text-uppercase text-muted mb-4"><b>Invitar usuario</b></p>
         <div class="card">
             <div class="card-body">
                 <!-- form -->
